# haskell-mvm

./: .gitignore  LICENSE  README.md  format.sh  hlint.sh  hs-jit-playground.cabal  mvm-haskell.cabal  stack.yaml  test.sh
bench/: Bench.hs  CBench.hs  MVMBench.hs
examples/: boolops.expected  boolops.mvm  casts.mvm  dlopen.mvm  ffi.expected  ffi.mvm  fib.mvm  flops.expected  flops.mvm  for.expected  for.mvm  fundef.expected  fundef.mvm  if.mvm  intops.expected  intops.fail.mvm  intops.mvm  print.expected  print.mvm  scoping.expected  scoping.mvm  strops.expected  strops.mvm  vardef.expected  vardef.mvm  while.mvm
examples/gnuplot/: pm3d.8.expected  pm3d.8.gnu  pm3d.8.mvm
examples/graphics/: pm3d.8.mvm  pm3d.8.ppm
examples/original/: add.mvm  assign.mvm  bitwise.mvm  div.mvm  expr.mvm  for.mvm  function.mvm  if.mvm  literal.mvm  mul.mvm  sub.mvm  while.mvm
examples/original/additional/: ackermann.mvm  ackermann_closure.mvm  casts.mvm  closure.mvm  complex.mvm  complex2.mvm  fib.mvm  fib_closure.mvm  function-call.mvm  function-cast.mvm  function.mvm  vars.mvm
examples/original/additional/fail/: for_var.mvm  function-cast.mvm  function-return-void.mvm  if-fun.mvm  op_bin.mvm  op_streq.mvm  op_sub.mvm  vars.expected  vars.mvm
examples/original/optional/: function_native.mvm  plot.mvm  plot.ppm
examples/original/perf/: graph_plot.mvm  lissajous.mvm  newton-ffi.mvm  newton-pure.mvm  newton.c  newton.mvm  plot.mvm  prime-ffi.mvm  prime-pure.mvm  prime.c  prime.mvm
src/: ASM.hs  ASMSyntax.hs  BinarySyntax.hs  BinaryTranslator.hs  Bytecode.hs  BytecodeInterpreter.hs  BytecodePrinter.hs  BytecodeTranslator.hs  CallingConvention.hs  Eval.hs  EvalASM.hs  EvalSimplified.hs  ForeignEval.hs  JIT.hs  Lexer.x  Lib.hs  LinearSyntax.hs  Parser.y  PreSyntax.hs  PrettyPrint.hs  PrettyPrintASM.hs  PrettyPrintBinary.hs  PrettyPrintSimplified.hs  ResolvedSyntax.hs  SimplifiedSyntax.hs  Syntax.hs  SyntaxLinearizer.hs  SyntaxResolver.hs  SyntaxSimplifier.hs  SyntaxTrimmer.hs  TypeChecker.hs  TypedSyntax.hs  Util.hs  Value.hs  VarUsageResolver.hs
test/: GoldenTests.hs  Spec.hs  runasm.sh
