name:                mvm-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/projedi/mvm-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Shabalin
maintainer:          shabalyn.a@gmail.com
copyright:           2016 Alexander Shabalin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Bytecode
                     , BytecodeInterpreter
                     , BytecodePrinter
                     , BytecodeTranslator
                     , Eval
                     , ForeignEval
                     , JIT
                     , Lexer
                     , Parser
                     , PrettyPrint
                     , Syntax
                     , Util
                     , Value
  c-sources:           src/ForeignEval.c
                     , src/Util.c
  build-depends:       base >= 4.7 && < 5
                       -- for hlint
                     , apply-refact
                     , array
                     , containers
                     , filepath
                     , hindent >= 5.2
                     , hlint
                     , inline-c
                     , mtl
  extra-libraries:     dl
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fdefer-type-errors
  cc-options:          -Wall -O2

executable mvm-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mvm-haskell
  default-language:    Haskell2010

test-suite mvm-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GoldenTests
  build-depends:       base
                     , mvm-haskell
                     , Diff
                     , bytestring
                     , filepath
                     , process
                     , tasty
                     , tasty-expected-failure
                     , tasty-golden
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/projedi/mvm-haskell
